--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,10 @@
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MC6VDTV"
                 height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    <!-- End Google Tag Manager (noscript)-->
+
+    {% include sidebar.html %}
+
     <!-- Wrapper -->
     {{ content }}
 
