--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,29 +1,15 @@
-<header >
-    <h3><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h3>
-
-    {% if site.logo %}    
-    <img class="avatar" src="{{ site.baseurl }}/assets/images/{{ site.logo }}" alt="Logo" />
-    {% endif %}
-
-    <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-
-    <div class="instagram">
-        <i class="fab fa-instagram"></i>
-        <a href="https://instagram.com/{{ site.instagram }}" target="_blank">{{  site.instagram }}</a>
-    </div>
-
-    {% if site.github.is_project_page %}
-    <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-    {% endif %}
-
-
-    {% if site.show_downloads %}
-    <ul class="downloads">
-        <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-        <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-        <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-    </ul>
-    {% endif %}
-</header>
-    
+<!-- Intro -->
+<nav id="intro" class="wrapper style1 fullscreen fade-up">
+    <div id="wrapper">
+        <div class="inner">
+            <h1>Hyperspace</h1>
+            <p>
+                Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
+                and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.
+            </p>
+            <ul class="actions">
+                <li><a href="#one" class="button scrolly">Learn more</a></li>
+            </ul>
+        </div>
+     </div>
+</nav>
