--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,15 +1,16 @@
 <!-- Intro -->
 <nav id="intro" class="wrapper style1 fullscreen fade-up">
-    <div id="wrapper">
+    <!-- Sidebar -->
+    <section id="sidebar">
         <div class="inner">
-            <h1>Hyperspace</h1>
-            <p>
-                Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-                and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.
-            </p>
-            <ul class="actions">
-                <li><a href="#one" class="button scrolly">Learn more</a></li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="#intro">Celebrante</a></li>
+                    <li><a href="#one">Who we are</a></li>
+                    <li><a href="#two">What we do</a></li>
+                    <li><a href="#three">Get in touch</a></li>
+                </ul>
+            </nav>
         </div>
-     </div>
+    </section>
 </nav>
