--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <!-- Intro -->
-<nav id="intro" class="wrapper style1 fullscreen fade-up">
+<nav >
     <!-- Sidebar -->
     <section id="sidebar">
         <div class="inner">
