--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,16 +1,16 @@
-<!-- Intro -->
-<nav >
-    <!-- Sidebar -->
-    <section id="sidebar">
-        <div class="inner">
-            <nav>
-                <ul>
-                    <li><a href="#intro">Celebrante</a></li>
-                    <li><a href="#one">Who we are</a></li>
-                    <li><a href="#two">What we do</a></li>
-                    <li><a href="#three">Get in touch</a></li>
-                </ul>
-            </nav>
-        </div>
-    </section>
-</nav>
+<!-- Sidebar -->
+<section id="sidebar">
+    <div class="inner">
+        <nav>
+            <ul>
+                <li><a href="#intro">Celebrante</a></li>
+                <li><a href="#one">Mestre de Cerimônia</a></li>
+                <li><a href="#two">Casamentos//Bodas/Aniversários</a></li>
+                <li><a href="#three">Contato</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <!-- Footer -->
+    {% include footer.html %}
+</section>
