--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
     <!-- Wrapper -->
     {{ content }}
 
+    <!-- Footer -->
+    {% include footer.html %}
+
     <!-- Scripts -->
     {% include scripts.html %}
 
