--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
         <nav>
             <ul>
                 <li><a href="#intro">Celebrante</a></li>
-                <li><a href="#one">Mestre de Cerimônia</a></li>
+                <li><a href="#one">Mestre de Cerimonia</a></li>
                 <li><a href="#two">Casamentos Bodas Aniversarios</a></li>
                 <li><a href="#three">Contato</a></li>
             </ul>
