--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,12 @@
 <!-- Sidebar -->
 <section id="sidebar">
-    <div class="inner">
+    <div class="inner">       
         <nav>
+            <img src="images/logo.png" alt="LogoTipo" />
             <ul>
-                <li><a href="#intro">Celebrante</a></li>
+                <li><a href="#intro"> Celebrante </a></li>
                 <li><a href="#one">Mestre de Cerimonia</a></li>
-                <li><a href="#two">Casamentos Bodas Aniversarios</a></li>
+                <li><a href="#two">O Grande dia</a></li>
                 <li><a href="#three">Contato</a></li>
             </ul>
         </nav>
