--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3240,7 +3240,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #7a4af3;
 		}
 
 		.wrapper.style1-alt {
@@ -3831,34 +3831,38 @@ input, select, textarea {
 					line-height: inherit;
 				}
 
-					#sidebar nav ul {
-						display: -moz-flex;
-						display: -webkit-flex;
-						display: -ms-flex;
-						display: flex;
-						height: inherit;
-						line-height: inherit;
-						margin: 0;
-					}
+				#sidebar nav ul {
+					display: -moz-flex;
+					display: -webkit-flex;
+					display: -ms-flex;
+					display: flex;
+					height: inherit;
+					line-height: inherit;
+					margin: 0;
+				}
 
-						#sidebar nav ul li {
-							display: block;
-							height: inherit;
-							line-height: inherit;
-							margin: 0 0 0 2em;
-							padding: 0;
-						}
+				#sidebar nav ul li {
+					display: block;
+					height: inherit;
+					line-height: inherit;
+					margin: 0 0 0 2em;
+					padding: 0;
+				}
 
-					#sidebar nav a {
-						height: inherit;
-						line-height: inherit;
-						padding: 0;
-					}
+				#sidebar nav a {
+					height: inherit;
+					line-height: inherit;
+					padding: 0;
+				}
 
-						#sidebar nav a:after {
-							background-image: none;
-							background-color: #b74e91;
-						}
+				#sidebar nav img {
+					display: none;
+				}
+
+				#sidebar nav a:after {
+					background-image: none;
+					background-color: #b74e91;
+				}
 
 		}
 
