--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 <section id="sidebar">
     <div class="inner">       
         <nav>
-            <img src="images/logo.png" alt="LogoTipo" />
+            <img src="images/logo.jpg" alt="LogoTipo" />
             <ul>
                 <li><a href="#intro"> Celebrante </a></li>
                 <li><a href="#one">Mestre de Cerimonia</a></li>
