--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2536,7 +2536,7 @@ input, select, textarea {
 			}
 
 				.wrapper.style1 .icon.major:before {
-					color: #5e42a6;
+					color: #00BAE0;
 				}
 
 				.wrapper.style1-alt .icon.major:before {
@@ -3240,27 +3240,27 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #7a4af3;
+			background-color: #00BAE0;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #00BAE0;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #0182A2;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #0182A2;
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #00597B;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: #00597B;
 		}
 
 		.wrapper.fullscreen {
@@ -3524,7 +3524,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #000000;
+		background: #002A3A;
 		cursor: default;
 		height: 100vh;
 		left: 0;
