--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -16,7 +16,7 @@
                     </li>
                     <li>
                         <h3>E-mail</h3>
-                        <a href="#">terapiainspire@gmail.com</a>
+                        <a href="mailto:diegoararas@gmail.com">diegoararas@gmail.com</a>
                     </li>
                     <li>
                         <h3>Telefone</h3>
