--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -27,6 +27,8 @@
                         <ul class="icons">
                             <li><a href="https://www.instagram.com/diegosantoscelebrante/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                             <li><a href="https://api.whatsapp.com/send/?phone=5519971564256&text&app_absent=0" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+                            <li><a href="https://g.page/r/Cb-rRwcv-APuEBA" class="icon solid fa-location-dot alt"><span class="label">Google Maps</span></a></li>
+           
                         </ul>
                     </li>
                 </ul>
