--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,10 +2,10 @@
 <section id="sidebar">
     <div class="inner">       
         <nav>
-            <img src="{{ site.logo }}" alt="Logo" />
+            <img src="images/logo.png" alt="logo" />
             <ul>
-                <li><a href="#intro"> Celebrante </a></li>
-                <li><a href="#one">Mestre de Cerimonia</a></li>
+                <li><a href="#intro">Celebrante</a></li>
+                <li><a href="#one">Cerimônia</a></li>
                 <li><a href="#two">O Grande dia</a></li>
                 <li><a href="#three">Contato</a></li>
             </ul>
