--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
     <!--<title>{{ site.title }}</title>-->
     <!-- Meta -->
     <meta charset="utf-8">
-    <meta name="theme-color" content="#3a41e4">
+    <meta name="theme-color" content="#{{ site.color }}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="{{ site.description }}"> 
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
@@ -12,6 +12,11 @@
     <link rel="shortcut icon" href="favicon.ico">
  
     <meta name="robots" content="all">
+    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="{{ site.url }}">
+    <meta property="og:description" content="{{ site.description }}">
+    <meta property="og:image" content="{{ site.logo }}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
