--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,32 @@
     <div class="inner">
         <h2>Contato</h2>
         <p>Agende agora uma conversa.</p>
-        <div class="split style1">				
+        <div class="split style1">	
+            <section>
+                <form  action="https://forms.un-static.com/forms/83c1a99d15bbea197ca8dbfc48d1975cd85264a4" method="post">
+                    <div class="fields">
+                        <div class="field half">
+                            <label for="name">Seu Nome:</label>
+                            <input type="text" name="name" id="name" />
+                        </div>
+                        <div class="field half">
+                            <label for="email">E-mail:</label>
+                            <input type="text" name="email" id="email" />
+                        </div>
+                        <div class="field half">
+                            <label for="phone">Celular:</label>
+                            <input type="text" name="celular" id="celular" />
+                        </div>
+                        <div class="field">
+                            <label for="message">Mensagem:</label>
+                            <textarea name="message" id="message" rows="5"></textarea>
+                        </div>
+                    </div>
+                    <ul class="actions">
+                        <li> <button class="button submit" type="submit">Enviar</button></li>
+                    </ul>
+                </form>
+            </section>			
             <section>
                 <ul class="contact">
                     <li>
@@ -28,7 +53,6 @@
                             <li><a href="https://www.instagram.com/diegosantoscelebrante/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                             <li><a href="https://api.whatsapp.com/send/?phone=5519971564256&text&app_absent=0" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
                             <li><a href="https://g.page/r/Cb-rRwcv-APuEBA" class="icon solid fa-location-dot alt"><span class="label">Google Maps</span></a></li>
-           
                         </ul>
                     </li>
                 </ul>
