--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
         <p>Agende agora uma conversa.</p>
         <div class="split style1">	
             <section>
-                <form  action="https://forms.un-static.com/forms/83c1a99d15bbea197ca8dbfc48d1975cd85264a4" method="post">
+                <form  action="https://fabform.io/f/n_ogwcH" method="post">
                     <div class="fields">
                         <div class="field half">
                             <label for="name">Seu Nome:</label>
@@ -25,7 +25,8 @@
                         </div>
                     </div>
                     <ul class="actions">
-                        <li> <button class="button submit" type="submit">Enviar</button></li>
+                        <li><Button class="button submit" type="submit" >Enviar </Button></li>
+                        
                     </ul>
                 </form>
             </section>			
