--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
         <p>Agende agora uma conversa.</p>
         <div class="split style1">	
             <section>
-                <form  action="https://fabform.io/f/n_ogwcH" method="post">
+                <form  action="https://fabform.io/f/EkqWpgg" method="post">
                     <div class="fields">
                         <div class="field half">
                             <label for="name">Seu Nome:</label>
