--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
-<!-- Three -->
+{% assign empresa = site.data.data.empresa %}
 <section id="three" class="wrapper style1 fade-up">
     <div class="inner">
-        <h2>Contato</h2>
+        <h2>{{ empresa.title }}</h2>
         <p>Agende agora uma conversa.</p>
         <div class="split style1">	 
             <section>
