--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -18,6 +18,10 @@
                     <h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
                     <a href="#">{{ empresa.email }}</a>
                 </li>
+                <li>
+                    <h3 class="icon brands fa-instagram"><span class="label">Instagram</span></h3>
+                    <a href="#">{{ empresa.instagram }}</a>
+                </li>
             </ul>
         </div>
     </div>
