--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,9 @@
 <!-- Footer -->
 {% assign empresa = site.data.data.empresa %}
 <footer id="footer">
-    <div class="inner">
+    <div class="inner">       
         <ul class="icons">
+           <!--<li><a href="#" ><img src="{{ empresa.logo }}" alt="Logo" /></a></li>-->
             <li><a href="{{ empresa.whatsapp }}" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
             <li><a href="{{ empresa.instagram }}" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> 
             <li><a href="{{ empresa.email }}" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
