--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,6 @@
         <a href="#" class="image avatar"><img src="{{ empresa.imagem }}" alt="Foto do Diego" /></a>
         <h1>Eu sou <strong>Celebrante de Casamento</strong>.<br /><br />
             Celebro o seu casamento com a benção de Deus!<br /></h1>
-        <br /> <a href="#one">Celebrante</a>
-        <br /> <a href="#two">Trabalho Recentes</a>
-        <br /><a href="#three">Contato</a>
+        <br /> <a href="#one">Celebrante</a> - <a href="#two"> Casamentos </a> - <a href="#three">Contato</a>
     </div>
 </header>
