--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,6 @@
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     
     {% seo %}
+    {% include analytics.html %}
 
 </head>
