--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2073,7 +2073,7 @@ input, select, textarea {
 				border-radius: 0.35em;
 				border: solid 3px rgba(255, 255, 255, 0.5);
 				color: #fff;
-				content: 'View';
+				content: 'Visualizar';
 				display: inline-block;
 				font-size: 0.8em;
 				font-weight: 400;
@@ -2772,7 +2772,7 @@ input, select, textarea {
 		-ms-box-sizing: content-box;
 		box-sizing: content-box;
 		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-		background: #fff;
+		background: #000;
 		border-radius: 0.35em;
 		box-shadow: 0 0.1em 0.15em 0 rgba(0, 0, 0, 0.15);
 		overflow: hidden;
@@ -2813,7 +2813,13 @@ input, select, textarea {
 			}
 
 		.poptrox-popup .caption {
-			background: #fff;
+			visibility: hidden;
+			display: none;
+		}
+
+		.poptrox-popup .caption:not(:contains("(untitled)")) {
+			background: #000;
+			color : #FFF;
 			bottom: 0;
 			cursor: default;
 			font-size: 0.9em;
@@ -2823,8 +2829,14 @@ input, select, textarea {
 			position: absolute;
 			text-align: center;
 			width: 100%;
-			z-index: 1;
-		}
+			z-index: 1; 
+			caption-side: bottom;
+		  }		  
+		 
+		.poptrox-popup .caption:empty {
+			visibility: hidden;
+			display: none;
+		  }
 
 		.poptrox-popup .nav-next,
 		.poptrox-popup .nav-previous {
