--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,9 +3,9 @@
 <script src="assets/js/jquery.poptrox.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
-<script async src="assets/js/jquery.scrollex.min.js"></script>
-<script async src="assets/js/jquery.scrolly.min.js"></script> 
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script> 
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
-<script async src="https://kit.fontawesome.com/8dd701ac15.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/8dd701ac15.js" crossorigin="anonymous"></script>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
