--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,3 +9,4 @@
 <script src="assets/js/main.js"></script>
 <script async src="https://kit.fontawesome.com/8dd701ac15.js" crossorigin="anonymous"></script>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
+<script async src="//www.instagram.com/embed.js"></script>
