--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -7,6 +7,6 @@
 <script src="assets/js/jquery.scrolly.min.js"></script> 
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
-<script async src="https://kit.fontawesome.com/8dd701ac15.js" crossorigin="anonymous"></script>
+<script async src="https://kit.fontawesome.com/8dd701ac15.js" crossorigin="anonymous" rel="stylesheet"></script>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
-<script async src="//www.instagram.com/embed.js"></script>
+<script async src="//www.instagram.com/embed.js" rel="stylesheet"></script>
