--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-    
+    {% if site.color %}
+    <meta name="theme-color" content="{{ site.color }}">
+    {% endif%}
     {% seo %}
     {% include analytics.html %}
 </head>
