Revert "Revert "Update contact.html""
This reverts commit 3fdb20580a37cefac29722fd3ce553179a5445b9.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,14 @@
     <meta name="theme-color" content="#{{ site.color }}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-    <link rel="shortcut icon" href="favicon.ico"> 
+    <link rel="shortcut icon" href="favicon.ico">
+ 
     <meta name="robots" content="all"> 
     <meta property="og:image" content="{{ site.logo }}">  
-	<link rel="stylesheet" href="assets/css/main.css" /><noscript>
-    <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     {% if site.color %}
     <meta name="theme-color" content="{{ site.color }}">
     {% endif%}
