--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,4 +8,5 @@
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
 <script async src="https://kit.fontawesome.com/8dd701ac15.js" crossorigin="anonymous" rel="stylesheet"></script>
-<script src="https://smtpjs.com/v3/smtp.js"></script> 
+<script src="https://smtpjs.com/v3/smtp.js"></script>
+<script async src="//www.instagram.com/embed.js" rel="stylesheet"></script>
