--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,6 +23,7 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
+	scroll-behavior: smooth;
 	vertical-align: baseline;}
 
 article, aside, details, figcaption, figure,
