--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -16,11 +16,11 @@
                 </li>
                 <li>
                     <h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-                    <a href="#">{{ empresa.email }}</a>
+                    <a href="mail:{{ empresa.email }}">{{ empresa.email }}</a>
                 </li>
                 <li>
                     <h3 class="icon brands fa-instagram"><span class="label">Instagram</span></h3>
-                    <a href="#">{{ empresa.instagram }}</a>
+                    <a href="{{ empresa.instagram }}">{{ empresa.instagram }}</a>
                 </li>
             </ul>
             <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/CuWyT55NvYr/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"><div style="padding:16px;"> <a href="https://www.instagram.com/reel/CuWyT55NvYr/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank"> <div style=" display: flex; flex-direction: row; align-items: center;"> 
