--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
     <div class="inner">       
         <ul class="icons">
            <!--<li><a href="#" ><img src="{{ empresa.logo }}" alt="Logo" /></a></li>-->
+           <li><a href="{{ empresa.wazelink }}" class="icon solid fa-location-dot"><span class="label">Waze</span></a></li>
             <li><a href="{{ empresa.whatsapp }}" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
             <li><a href="{{ empresa.instagram }}" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> 
             <li><a href="{{ empresa.email }}" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
