--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -51,7 +51,7 @@
                     </a>
                 </li> 
                 <li>
-                    <a href="mail:{{ empresa.email }}">
+                    <a href="{{ empresa.emaillink }}">
                         <h3 class="icon solid fa-envelope"><span class="label">E-mail</span></h3>
                         {{ empresa.email }}
                     </a>
