--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
            <li><a href="{{ empresa.wazelink }}" class="icon solid fa-location-dot"><span class="label">Waze</span></a></li>
             <li><a href="{{ empresa.whatsapp }}" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
             <li><a href="{{ empresa.instagram }}" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> 
-            <li><a href="{{ empresa.email }}" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+            <li><a href="{{ empresa.emaillink }}" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
         </ul>
         <ul class="copyright">
             <i class="fas fa-brands fa-creative-commons"></i>  Feito com <i class="fas fa-heart"></i> pelo <a href="https://github.com/fabiohcnobre" target="_blank" rel="nofollow">FabioHCNobre</a></a>.
