--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
 <!-- Header -->
 <header id="header">
     <div class="inner">
-        <a href="#" class="image avatar"><img src="{{ empresa.imagem }}" alt="Foto do Diego" /></a>
+        <a href="" class="image avatar"><img src="{{ empresa.imagem }}" alt="Foto do Diego" /></a>
         <h1>Eu sou <strong>Celebrante de Casamento</strong>.<br /><br />
-            Celebro o seu casamento com a benção de Deus!<br /></h1>
+            {{ empresa.slogan }} <br /></h1>
         <br /> <a href="#one">Celebrante</a> - <a href="#two"> Casamentos </a> - <a href="#three">Contato</a>
     </div>
 </header>
