--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -56,6 +56,9 @@
                         {{ empresa.email }}
                     </a>
                 </li>
+                <li>
+                <a href="" class="image avatar"><img src="{{ empresa.logonova }}" alt="Celebrante" /></a>
+                </li>
             </ul>
         </div>
     </div>
