--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -34,25 +34,25 @@
             <ul class="labeled-icons">
                 <li>
                     <a href="{{ empresa.enderecolink }}">
-                        <h3 class="icon solid fa-location-dot"><span class="label">Endereço</span></h3>
+                        <h3 class="icon solid fa-location-dot"><span class="label"><i class="fa-solid fa-location-dot"></i>Endereço</span></h3>
                         {{ empresa.endereco }}
                     </a>
                 </li>
                 <li>
                     <a href="{{ empresa.whatsapp }}"> 
-                        <h3 class="icon brands fa-whatsapp"><span class="label">Whatsapp</span></h3>
+                        <h3 class="icon brands fa-whatsapp"><span class="label"><i class="fa fa-whatsapp"></i>Whatsapp</span></h3>
                         {{ empresa.telefone }}
                     </a>
                 </li> 
                 <li>
                     <a href="{{ empresa.instagram }}">
-                        <h3 class="icon brands fa-instagram"><span class="label">Instagram</span></h3>
+                        <h3 class="icon brands fa-instagram"><span class="label"><i class="fa fa-instagram alt"></i>Instagram</span></h3>
                         {{empresa.user}}
                     </a>
                 </li> 
                 <li>
                     <a href="{{ empresa.emaillink }}">
-                        <h3 class="icon solid fa-envelope"><span class="label">E-mail</span></h3>
+                        <h3 class="icon solid fa-envelope"><span class="label"><i class="fa-solid fa-envelope"></i>E-mail</span></h3>
                         {{ empresa.email }}
                     </a>
                 </li>
