--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
     <div class="inner">       
         <ul class="icons">
            <!--<li><a href="#" ><img src="{{ empresa.logo }}" alt="Logo" /></a></li>-->
-           <li><a href="{{ empresa.wazelink }}" class="icon solid fa-location-dot"><span class="label">Waze</span></a></li>
-            <li><a href="{{ empresa.whatsapp }}" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
-            <li><a href="{{ empresa.instagram }}" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> 
-            <li><a href="{{ empresa.emaillink }}" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+           <li><a href="{{ empresa.wazelink }}"><i class="fa solid fa-location-dot"></i><span class="label"> Waze </span></a></li>
+            <li><a href="{{ empresa.whatsapp }}"><i class="fa brands fa-whatsapp"></i><span class="label"> WhatsApp </span></a></li>
+            <li><a href="{{ empresa.instagram }}"><i class="fa brands fa-instagram"></i><span class="label"> Instagram </span></a></li> 
+            <li><a href="{{ empresa.emaillink }}"><i class="fa solid fa-envelope"></i><span class="label"> Email </span></a></li>
         </ul>
         <ul class="copyright">
             <i class="fas fa-brands fa-creative-commons"></i>  Feito com <i class="fas fa-heart"></i> pelo <a href="https://github.com/fabiohcnobre" target="_blank" rel="nofollow">FabioHCNobre</a></a>.
