--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -6,3 +6,12 @@
     gtag('js', new Date());
     gtag('config', '{{site.analytics}}');
 </script>
+<!-- Event snippet for Visualização de página conversion page -->
+<script>
+    gtag('event', 'conversion', {
+        'send_to': 'AW-11564862366/DL0-CNDT9YoaEJ6Xx4or',
+        'value': 0.1,
+        'currency': 'BRL'
+    });
+  </script>
+  
