--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,7 @@
     <div class="inner">
         <a href="" class="image avatar"><img src="{{ empresa.imagem }}" alt="Foto do Diego" /></a>
         <h1><strong>{{ empresa.nome }}</strong>
-            <br /> 
-            {{ empresa.slogan }} <br /></h1>
-        <br /> <a href="#one"><i class="fa-solid fa-user"></i> {{ menu.item1 }}</a> - <a href="#two"><i class="fa-solid fa-place-of-worship"></i> {{ menu.item2 }} </a> - <a href="#three"><i class="fa-solid fa-address-book"></i> {{ menu.item3 }}</a>
+            <br /> <p> {{ empresa.slogan }}</p></h1>
+        <br /> <a href="#celebrante"><i class="fa-solid fa-user"></i> {{ menu.item1 }}</a> - <a href="#casamentos"><i class="fa-solid fa-place-of-worship"></i> {{ menu.item2 }} </a> - <a href="#contatos"><i class="fa-solid fa-address-book"></i> {{ menu.item3 }}</a>
     </div>
 </header>
