--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,8 +2,8 @@
 {% assign contato = site.data.data.contato %}
 <!-- Three -->
 <section id="contatos">
-    <h2>{{ contato.title }}</h2>
-    <p>{{ empresa.subtitle }}</p>
+    <h2> <i class="fa-solid fa-address-book"></i> {{ contato.title }}</h2>
+    <p>{{ contato.subtitle }}</p>
     <div class="row">
         <div class="col-8 col-12-small">
             <ul class="labeled-icons">
