--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,5 +1,5 @@
-{% assign empresa = site.data.data.empresa %}
-{% assign contato = site.data.data.contato %}
+{% assign empresa = data.empresa %}
+{% assign contato = data.contato %}
 <!-- Three -->
 <section id="contatos">
     <h2><i class="fa-solid fa-address-book"></i> {{ contato.title }}</h2>
