--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-{% assign empresa = site.data.data.empresa %}
-{% assign menu = site.data.data.menu %}
+{% assign empresa = data.empresa %}
+{% assign menu = data.menu %}
 <!-- Header -->
 <header id="header">
     <div class="inner">
