--- a/_includes/casamentos.html
+++ b/_includes/casamentos.html
@@ -1,6 +1,6 @@
 <!-- casamentos -->
 {% assign casamentos = site.data.casamentos.casamentos %} 
-{% assign casamento = site.data.data.Casamentos %} 
+{% assign casamento = data.Casamentos %} 
 <section id="casamentos">
     <h2><i class="fa-solid fa-place-of-worship"></i> {{ casamento.title }} </h2>
     <p>{{ casamento.subtitle }}</p>
