--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,8 @@
     <meta property="og:image" content="{{ site.logo }}">  
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="stylesheet" href="../assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
     {% if site.color %}
     <meta name="theme-color" content="{{ site.color }}">
     {% endif%}
