--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,15 @@
-<!DOCTYPE HTML>
 <!--
 	Feito com <3 pelo FabioHCNobre
 	Saiba mais em github.com/fabiohcnobre!
 -->
-<html lang="pt-br">
+<!DOCTYPE html>
+{% if page.language == "en" %}
+{% assign data = site.data.dataen %}
+<html lang="en"  data-bs-theme="dark"> 
+{% else %}
+{% assign data = site.data.data %}
+<html lang="pt-BR"  data-bs-theme="light"> 
+{% endif %} 
 {% include head.html %}
 <body class="is-preload">
     {% include header.html %}
