--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
            <li><a href="{{ empresa.wazelink }}"><i class="fa solid fa-location-dot"></i><span class="label"> Waze </span></a></li>
             <li><a href="{{ empresa.whatsapp }}"><i class="fa brands fa-whatsapp"></i><span class="label"> WhatsApp </span></a></li>
             <li><a href="{{ empresa.instagram }}"><i class="fa brands fa-instagram"></i><span class="label"> Instagram </span></a></li> 
-            <li><a href="{{ empresa.emaillink }}"><i class="fa solid fa-envelope"></i><span class="label"> Email </span></a></li>
+            <li><a href="{{ empresa.emaillink }}"><i class="fa solid fa-envelope"></i><span class="label"> E-mail </span></a></li>
         </ul>
         <ul class="copyright">
             <a href="{{ empresa.languageurl }}">{{ empresa.languageVersion }} </a>
