--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,16 +4,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <link rel="shortcut icon" href="favicon.ico">
- 
     <meta name="robots" content="all"> 
     <meta property="og:image" content="{{ site.logo }}">  
-
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="../assets/css/main.css" />
     <noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
-    {% if site.color %}
-    <meta name="theme-color" content="{{ site.color }}">
-    {% endif%}
-    {% seo %}
+    {% if site.color %}<meta name="theme-color" content="{{ site.color }}">{% endif%}
+        {% seo %}
     {% include analytics.html %} 
 </head>
