--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,4 @@
-{% assign empresa = data.empresa %}
-{% assign menu = data.menu %}
-<header id="header">
+{% assign empresa = data.empresa %}{% assign menu = data.menu %}<header id="header">
     <div class="inner">
         <a href="" class="image avatar"><img src="{{ empresa.imagem }}" alt="Foto do Diego" /></a>
         <h1><strong>{{ empresa.nome }}</strong>
