--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,14 @@
-{% assign empresa = data.empresa %}
 <footer id="footer">
     <div class="inner">       
         <ul class="icons">
             <!--<li><a href="#" ><img src="{{ empresa.logo }}" alt="Logo" /></a></li>-->
-            <li><a href="{{ empresa.wazelink }}"><i class="fa solid fa-location-dot"></i><span class="label"> Waze </span></a></li>
-            <li><a href="{{ empresa.whatsapp }}"><i class="fa brands fa-whatsapp"></i><span class="label"> WhatsApp </span></a></li>
-            <li><a href="{{ empresa.instagram }}"><i class="fa brands fa-instagram"></i><span class="label"> Instagram </span></a></li> 
-            <li><a href="{{ empresa.emaillink }}"><i class="fa solid fa-envelope"></i><span class="label"> E-mail </span></a></li>
+            <li><a href="{{  data.empresa.wazelink }}"><i class="fa solid fa-location-dot"></i><span class="label"> Waze </span></a></li>
+            <li><a href="{{  data.empresa.whatsapp }}"><i class="fa brands fa-whatsapp"></i><span class="label"> WhatsApp </span></a></li>
+            <li><a href="{{  data.empresa.instagram }}"><i class="fa brands fa-instagram"></i><span class="label"> Instagram </span></a></li> 
+            <li><a href="{{  data.empresa.emaillink }}"><i class="fa solid fa-envelope"></i><span class="label"> E-mail </span></a></li>
         </ul>
         <ul class="copyright">
-            <a href="{{ empresa.languageurl }}">{{ empresa.languageVersion }} </a>
+            <a href="{{  data.empresa.languageurl }}">{{  data.empresa.languageVersion }} </a>
             <i class="fas fa-brands fa-creative-commons"></i>{{ data.footer.title }}<a href="{{ data.footer.link }}" target="_blank" rel="nofollow">{{ data.footer.subtitle }}</a>
         </ul>
     </div>
