--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -23,9 +23,9 @@
                     </a>
                 </li> 
                 <li>
-                    <a href="{{ empresa.emaillink }}">
+                    <a href="{{ site.emaillink }}">
                         <h3><span class="label"><i class="fa-solid fa-envelope"></i></span></h3>
-                        {{ data.empresa.email }}
+                        {{ site.email }}
                     </a>
                 </li> 
             </ul>
