--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,7 @@
         <ul class="copyright">
             <a href="{{  data.empresa.languageurl }}">{{  data.empresa.languageVersion }} </a>
             <i class="fas fa-brands fa-creative-commons"></i>{{ data.footer.title }}<a href="{{ data.footer.link }}" target="_blank" rel="nofollow">{{ data.footer.subtitle }}</a>
+            -  <i class="fas fa-solid fa-moon" onclick="toggleTheme()"></i>
         </ul>
     </div>
 </footer>
