--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,9 +8,9 @@
             <li><a href="{{  data.empresa.emaillink }}"><i class="fa solid fa-envelope"></i><span class="label"> E-mail </span></a></li>
         </ul>
         <ul class="copyright">
-            <a href="{{  data.empresa.languageurl }}">{{  data.empresa.languageVersion }} </a>
-            <i class="fas fa-brands fa-creative-commons"></i>{{ data.footer.title }}<a href="{{ data.footer.link }}" target="_blank" rel="nofollow">{{ data.footer.subtitle }}</a>
-            -  <i class="fas fa-solid fa-moon" onclick="toggleTheme()"></i>
+            <li><a href="{{  data.empresa.languageurl }}">{{  data.empresa.languageVersion }}</a></li>
+            <li><i class="fas fa-brands fa-creative-commons"></i>{{ data.footer.title }}<a href="{{ data.footer.link }}" target="_blank" rel="nofollow">{{ data.footer.subtitle }}</a></li>
+            <li>-  <i class="fas fa-solid fa-moon" onclick="toggleTheme()"></i></li>
         </ul>
     </div>
 </footer>
