Ajuste de Botão

--- a/_includes/celebrante.html
+++ b/_includes/celebrante.html
@@ -15,6 +15,6 @@
     <p>{{ data.Cerimonia.detalhes | markdownify }}</p>
     <ul class="actions">
         <!-- <li><a href="{{ empresa.portfolio }}" class="button">Portfólio em Breve</a></li> -->
-        <li><a href="{{ data.empresa.whatsapp }}" class="button"> {{ data.empresa.botaoAgenda }} <i class="fa fa-whatsapp"></i> </a></li> 
+        <li><a href="{{ data.empresa.whatsapp }}" class="buttonWhatsApp"> {{ data.empresa.botaoAgenda }} <i class="fa fa-whatsapp"></i> </a></li> 
     </ul>
 </section>
